# Shadowbroker

./: README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile
frontend/: package-lock.json
